   announcement.
 * Added 'y' option to app_record. This option enables a mode where any DTMF digit
   received will terminate recording.
 * Voicemail now supports per mailbox settings for folders when using IMAP storage.
   Previously the folder could only be set per context, but has now been extended 
   using the imapfolder option.
 * Voicemail now allows the pager date format to be specified separately from the
   email date format.
 * New applications JabberJoin, JabberLeave, and JabberSendGroup have been added
   to allow joining, leaving, and sending text to group chats.
 * MeetMe has a new option 'G' to play an announcement before joining a conference.
 * Page has a new option 'A(x)' which will playback an announcement simultaneously
   to all paged phones (and optionally excluding the caller's one using the new
   option 'n') before the call is bridged.
 * The 'f' option to Dial has been augmented to take an optional argument. If no
   argument is provided, the 'f' option works as it always has. If an argument is
   provided, then the connected party information of all outgoing channels created
   during the Dial will be set to the argument passed to the 'f' option.
 * Dial now inherits the GOSUB_RETVAL from the peer, when the U() option runs a
   Gosub on the peer.
 * The OSP lookup application adds in/outbound network ID, optional security,
   number portability, QoS reporting, destination IP port, custom info and service
   type features.
 * Added new application VMSayName that will play the recorded name of the voicemail
   user if it exists, otherwise will play the mailbox number.

Dialplan Functions
------------------
 * PITCH_SHIFT dialplan function added. This function can be used to modify the
   pitch of a channel's tx and rx audio streams.
 * Added new dialplan functions CONNECTEDLINE and REDIRECTING which permits
   setting various connected line and redirecting party information.